@@ -5,12 +5,15 @@ IF (NOT X11_FOUND)
 ELSE ()
   SET (USE_X11 1)
   IF (X11_Xext_FOUND)
-    SET (HAVE_LIB_XEXT 1)
+    SET (HAVE_LIBXEXT 1)
     CHECK_LIBRARY_EXISTS (Xext XShmAttach ${X11_LIBRARY_DIR} USE_XSHM)
   ENDIF ()
   CHECK_INCLUDE_FILE (X11/extensions/Xrender.h HAVE_X11_EXTENSIONS_XRENDER_H -I${X11_INCLUDE_DIR})
   IF (HAVE_X11_EXTENSIONS_XRENDER_H)
-    CHECK_LIBRARY_EXISTS (Xrender XRenderQueryVersion ${X11_LIBRARY_DIR} HAVE_LIB_XRENDER)
+    CHECK_LIBRARY_EXISTS (Xrender XRenderQueryVersion ${X11_LIBRARY_DIR} HAVE_LIBXRENDER)
+    IF (HAVE_LIBXRENDER)
+      PLUGIN_LINK_LIBRARIES (Xrender)
+    ENDIF ()
   ENDIF (HAVE_X11_EXTENSIONS_XRENDER_H)
   IF (OPENGL_FOUND)
     CHECK_INCLUDE_FILE (GL/gl.h HAVE_GL_GL_H -I${X11_INCLUDE_DIR})
@@ -27,8 +30,8 @@ ENDIF ()
 CONFIG_DEFINE (USE_X11)
 CONFIG_DEFINE (USE_X11_GLX)
 
-CONFIG_DEFINE (HAVE_LIB_XEXT)
-CONFIG_DEFINE (HAVE_LIB_XRENDER)
+CONFIG_DEFINE (HAVE_LIBXEXT)
+CONFIG_DEFINE (HAVE_LIBXRENDER)
 
 CONFIG_DEFINE (USE_XSHM)
 
